# Simple_AIaaS

./: .gitignore  .gitmodules  README.md
Client1/: .clang-format  .gitignore  CMakeLists.txt  CameraHandler.qml  Client1_fa_IR.ts  FullImage.qml  README.md  ReceivedImages.qml  main.cpp  main.qml  qml.qrc
Client1/include/Client1/: ClassifierClient.h  Controller.h  DetectedImageProvider.h  Structures.h
Client1/src/: ClassifierClient.cpp  Controller.cpp  DetectedImageProvider.cpp
Presentation/: AIaaS_V3.pptx
Server/: .gitignore  CMakeLists.txt  main.cpp
Server/include/DarknetWrapper/: DarkNetWrapper.h
Server/include/Server/: ClassifierService.h  Server.h
Server/src/: ClassifierService.cpp  DarkNetWrapper.cpp  Server.cpp
Server_Docker/: Dockerfile
protos/: image.proto
